@@ -6,8 +6,6 @@ import com.lucy.arti.clothes.dto.ClothesCreateRequestDto;
 import com.lucy.arti.clothes.dto.ClothesDetailResponseDto;
 import com.lucy.arti.clothes.repository.ClothesRepository;
 import com.lucy.arti.designer.domain.Designer;
-import com.lucy.arti.designer.dto.DesignerDetailResponseDto;
-import com.lucy.arti.designer.dto.DesignerPostDto;
 import com.lucy.arti.designer.repository.DesignerRepository;
 import com.lucy.arti.global.exception.BusinessException;
 import com.lucy.arti.global.exception.ErrorCode;
@@ -17,19 +15,23 @@ import com.lucy.arti.like.repository.LikeRepository;
 import com.lucy.arti.member.domain.Member;
 import com.lucy.arti.member.repository.MemberRepository;
 import java.io.IOException;
-import javax.swing.plaf.multi.MultiListUI;
-import javax.swing.plaf.multi.MultiMenuItemUI;
+import java.util.Collections;
+import java.util.List;
+import java.util.stream.Collectors;
+import javax.persistence.EntityNotFoundException;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.Sort;
 import org.springframework.security.core.Authentication;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-
-import javax.persistence.EntityNotFoundException;
-import java.util.List;
-import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.multipart.MultipartFile;
+
+// 페이지네이션
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
 
 @Service
 @RequiredArgsConstructor
@@ -70,7 +72,7 @@ public class ClothesService {
     }
 
     private String uploadClothesImages(MultipartFile image) throws IOException {
-        return s3Manager.upload(image,"arti-lookbook");
+        return s3Manager.upload(image, "arti-lookbook");
     }
 
     @Transactional
@@ -117,9 +119,16 @@ public class ClothesService {
             .map(x -> ClothesDetailResponseDto.of(x, x.getDesigner())).toList();
     }
 
-    public List<?> getTypeAll(Type type) {
-        return clothesRepository.findAllByType(type).stream()
-            .map(x -> ClothesDetailResponseDto.of(x, x.getDesigner())).toList();
+    public Page<ClothesDetailResponseDto> getTypeAll(Type type, int page) {
+        Pageable pageable = PageRequest.of(page, 8); // page는 조회할 페이지 번호, size는 한 페이지에 보여줄 옷 개수
+
+        Page<Clothes> clothesPage = clothesRepository.findAllByType(type, pageable);
+
+        List<ClothesDetailResponseDto> clothesDetailResponseList = clothesPage.getContent().stream()
+            .map(x -> ClothesDetailResponseDto.of(x, x.getDesigner()))
+            .collect(Collectors.toList());
+
+        return new PageImpl<>(clothesDetailResponseList, pageable, clothesPage.getTotalElements());
     }
 
     public ClothesDetailResponseDto getById(Long clothesId) {
